--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
    <link rel="stylesheet" type="text/css" href="style.css">
- <title>aMin And Tariq</title>
+ <title>alnukhba.com</title>
 </head>
 <body>
 <center>
