--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
    <link rel="stylesheet" type="text/css" href="style.css">
+   <script>src=index.js</script>
  <title>alnukhba.com</title>
 </head>
 <body>
