--- a/chat app.html
+++ b/chat app.html
@@ -27,9 +27,9 @@
   
  
   
-  <input  id="b" value="50" >
-  <output for="b "></output>
-  <button type="button" onclick = "a" >Click me!</button>
+  <input  id="b" >
+
+  <button type="button" onclick = "a" ></button>
 
     
      <button type="submit" class="signupbtn">Sign Up</button>
